game/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
D:\Games\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-protected
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
21
-classpath
D:\Games\lib\greenfoot.jar;D:\Games\lib\javafx-base-21.0.3-win.jar;D:\Games\lib\javafx-controls-21.0.3-win.jar;D:\Games\lib\javafx-fxml-21.0.3-win.jar;D:\Games\lib\javafx-graphics-21.0.3-win.jar;D:\Games\lib\javafx-media-21.0.3-win.jar;D:\Games\lib\javafx-swing-21.0.3-win.jar;D:\Games\lib\javafx-web-21.0.3-win.jar;D:\Games\lib\junit-4.12.jar;D:\Games\lib\junit-jupiter-5.5.2.jar;D:\Games\lib\junit-jupiter-api-5.5.2.jar;D:\Games\lib\junit-jupiter-engine-5.5.2.jar;D:\Games\lib\junit-jupiter-params-5.5.2.jar;D:\Games\lib\junit-platform-commons-1.5.2.jar;D:\Games\lib\junit-platform-engine-1.5.2.jar;D:\Games\lib\junit-platform-launcher-1.5.2.jar;D:\Games\lib\junit-platform-suite-api-1.5.2.jar;D:\Games\lib\junit-vintage-engine-5.5.2.jar;D:\Games\lib\hamcrest-core-1.3.jar;D:\Games\lib\opentest4j-1.2.0.jar;D:\Games\lib\bluej.jar;D:\Games\lib\classgraph-4.8.90.jar;D:\Games\lib\diffutils-1.2.1.jar;D:\Games\lib\commons-logging-1.2.jar;D:\Games\lib\jl1.0.1.jar;D:\Games\lib\opencsv-2.3.jar;D:\Games\lib\opencsv-2.4.jar;D:\Games\lib\xom-1.3.9.jar;D:\Games\lib\lang-stride.jar;D:\Games\lib\nsmenufx-3.1.0.jar;D:\Games\lib\wellbehavedfx-0.3.3.jar;D:\Games\lib\guava-33.3.1-jre.jar;D:\Games\lib\failureaccess-1.0.2.jar;D:\Games\lib\simple-png-0.2.0.jar;D:\Games\lib\simple-png-javafx-0.2.0.jar;D:\Games\lib\httpclient-4.5.13.jar;D:\Games\lib\httpcore-4.4.13.jar;D:\Games\lib\httpmime-4.1.1.jar;D:\Games\lib\javafx\javafx.base.jar;D:\Games\lib\javafx\javafx.controls.jar;D:\Games\lib\javafx\javafx.fxml.jar;D:\Games\lib\javafx\javafx.graphics.jar;D:\Games\lib\javafx\javafx.media.jar;D:\Games\lib\javafx\javafx.properties.jar;D:\Games\lib\javafx\javafx.swing.jar;D:\Games\lib\javafx\javafx.web.jar;D:\BO\OOP\pvz-project-OOP\game
-d
D:\BO\OOP\pvz-project-OOP\game\doc
-encoding
UTF-8
-charset
UTF-8
D:\BO\OOP\pvz-project-OOP\game\Buttons.java
<---- end of javadoc command ---->
Loading source file D:\BO\OOP\pvz-project-OOP\game\Buttons.java...
D:\BO\OOP\pvz-project-OOP\game\Buttons.java:17: error: invalid method declaration; return type required
    public Button(String idle, String hover) {
           ^
1 error
